Change Field name of models and updated it.

--- a/templates/email_template_base.html
+++ b/templates/email_template_base.html
@@ -270,7 +270,7 @@
                                                 {% endblock %}
                                                 {% block signature %}
                                                     Warm Regards,<br/>
-                                                    <strong>En Camp Team</strong>
+                                                    <strong>Demo App</strong>
                                                 {% endblock %}
                                             </td>
                                         </tr>
