Changed Email verification flow.

--- a/templates/email_template_base.html
+++ b/templates/email_template_base.html
@@ -266,11 +266,11 @@
                                         <tr>
                                             <td style="font-family: 'Open sans', Arial, sans-serif; color:#7f8c8d; font-size:14px; line-height: 24px;" align="left">
                                                 {% block extra_content %}
-                                                    We are En Camp
+                                                    We are Ecom Engine
                                                 {% endblock %}
                                                 {% block signature %}
                                                     Warm Regards,<br/>
-                                                    <strong>Demo App</strong>
+                                                    <strong>Ecom Engine</strong>
                                                 {% endblock %}
                                             </td>
                                         </tr>
