Updated password forget flow.

--- a/templates/account/password_reset_form.html
+++ b/templates/account/password_reset_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>En Camp - Password Reset</title>
+    <title>Ecom Engine - Password Reset</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
@@ -12,8 +12,8 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
-          <a href="#"  class="brand-logo center"><i class="material-icons right">send</i>En Camp</a>
+        <div class="nav-wrapper" style="padding: 1px;background-color: #4959a7 !important;border-color: #4959a7;">
+            <h5 style="text-align: center;"><a href="http://dropshipdynamo.com">Ecom Engine</a> </h5>
         </div>
     </nav>
     <div class="row" style="margin: 5%;">
@@ -47,13 +47,13 @@
         <div style="display: none;" id="errorMessage" class="col l4 s12 card red darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Failed!!!</span>
-                <p>We were unable to reset your password because this link has expired. Please request Password Reset again and we'll send you an email.</p>
+                <p>We were unable to reset your password because this link has expired. Please request <a style="text-decoration: none;color: #34ecec;" href="http://dropshipdynamo.com/user/reset-password"> Password Reset again </a>  and we'll send you an email.</p>
             </div>
         </div>
         <div style="display: none;" id="successMessage" class="col l4 s12 card green darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Password Reset Successful</span>
-                <p>Your password has been successfully reset. You can now login to En Camp and enjoy our wonderful services.</p>
+                <p>Your password has been successfully reset. You can now <a style="text-decoration: none;color: rgba(20, 15, 169, 0.91);font-weight: bold;" href="http://dropshipdynamo.com/user/login"> login </a> to Ecom Engine and enjoy our wonderful services.</p>
             </div>
         </div>
     </div>
