Temporary Password reset on user creation.

--- a/templates/account/password_reset_form.html
+++ b/templates/account/password_reset_form.html
@@ -19,7 +19,7 @@
     <div class="row" style="margin: 5%;">
         <div class="col l4 s12"></div>
         <form id="resetPasswordForm" class="col l4 s12 card" method="POST" action="{%   url 'rest_password_reset_confirm' %}">
-            <span class="card-title">Reset Your Password</span>
+            <span class="card-title" style="padding-left: 20px;">Reset Your Password</span>
             {% csrf_token %}
             <div class="row">
                 <div class="input-field col s12">
