user & subscription create from zap webhook

--- a/templates/passwordset/password_set_key_message.html
+++ b/templates/passwordset/password_set_key_message.html
@@ -5,7 +5,7 @@
     Hi,
 
     <p>
-        Welcome! You have been registered at Ecom Engine.
+        Welcome! You have been registered at Dropship CEO.
         Thanks for your interest.!
     </p>
     <p>
