--- a/templates/email_template_base.html
+++ b/templates/email_template_base.html
@@ -319,7 +319,7 @@
                                             <tr>
                                                 <td class="footer-link" style="font-family: 'Open sans', Arial, sans-serif; padding:10px; color:#666666; font-size:11px; line-height:15px;" align="center">
                                                     This email was intended for {{ user.email }}, because you signed up for
-                                                    <span style="color:#020202; font-weight: bold;">Demo App</span>
+                                                    <span style="color:#020202; font-weight: bold;">Dropship CEO</span>
                                                     . The link in this email will always directed to
                                                     <a href="#" style="text-decoration:none; color:#020202"></a>
                                                     .<br/>
