--- a/templates/account/email/password_reset_key_message.html
+++ b/templates/account/email/password_reset_key_message.html
@@ -1,7 +1,7 @@
 {% extends 'email_template_base.html' %}
 
 {% block email_content %}
-    Hi {{ user.last_name }},
+    Hi {% if user.last_name %} {{ user.last_name }}{% endif %},
 
     <p>We recently received a request from you to reset your password. Click the link below to reset your password.</p>
 {% endblock %}
