--- a/templates/email_template_base.html
+++ b/templates/email_template_base.html
@@ -249,7 +249,7 @@
                                                         <tr>
                                                             <td style="font-family: 'Open sans', Arial, sans-serif; color:#FFFFFF; font-size:14px; padding-left: 25px;padding-right: 25px; letter-spacing:1px;font-weight: bold; " align="center" height="40">
                                                                 {% block action_buttons %}
-                                                                    <a href="http://essence.earth/" style="text-decoration:none; color:#ffffff">
+                                                                    <a href="https://dropshipdynamo.com/" style="text-decoration:none; color:#ffffff">
                                                                         CTA BUTTON TEXT
                                                                     </a>
                                                                 {% endblock %}
@@ -320,8 +320,6 @@
                                                 <td class="footer-link" style="font-family: 'Open sans', Arial, sans-serif; padding:10px; color:#666666; font-size:11px; line-height:15px;" align="center">
                                                     This email was intended for {{ user.email }}, because you signed up for
                                                     <span style="color:#020202; font-weight: bold;">Dropship CEO</span>
-                                                    . The link in this email will always directed to
-                                                    <a href="#" style="text-decoration:none; color:#020202"></a>
                                                     .<br/>
                                                     © {% now "Y" %} <span style="color:#020202; font-weight: bold;"></span>,
                                                     All Rights Reserved.
